--- a/src/main/resources/local.properties
+++ b/src/main/resources/local.properties
@@ -15,30 +15,25 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 #
-
 #
 # Description: Solo local environment configurations.
 # Version: 1.1.3.15, Mar 17, 2019
 # Author: Liang Ding
 #
-
 #### MySQL runtime ####
 runtimeDatabase=MYSQL
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=1105lwc
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.URL=jdbc:mysql://localhost:3306/solo?useUnicode=yes&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-
+jdbc.URL=jdbc:mysql://10.128.1.117:3306/solo?useUnicode=yes&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 #### H2 runtime ####
 #runtimeDatabase=H2
 #jdbc.username=root
 #jdbc.password=
 #jdbc.driver=org.h2.Driver
 #jdbc.URL=jdbc:h2:~/solo_h2/db;MODE=MYSQL
-
 # The minConnCnt MUST larger or equal to 3
 jdbc.minConnCnt=5
 jdbc.maxConnCnt=10
-
 # The specific table name prefix
 jdbc.tablePrefix=b3_solo
